--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "konva": "^8.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fade-in": "^2.0.1",
+    "react-konva": "^17.0.2-5",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
